# TowardsTheMean

./: .gitignore  .ignore  CMakeLists.txt  DEPENDENCIES  README.md
src/: average.cpp  bot.cpp  bot.h  capture.cpp  capture.h  helper.cpp  helper.h  imageBuffer.cpp  imageBuffer.h  main.cpp  mar_algo.h  mar_util.h  projection.cpp  projection.h  properties.h  tests.cpp
